// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add caption 1`] = `
<div
  className="ola_table-container"
>
  <table
    className="ola_table"
  >
    <caption>
      test caption
    </caption>
    <tbody />
  </table>
</div>
`;

exports[`Align center Cell 1`] = `
<td
  className="ola_tableCell is-center"
  style={
    Object {
      "--borderColor": null,
      "--table-background": null,
    }
  }
>
  Test content
</td>
`;

exports[`Can be responsive 1`] = `
<div
  className="ola_table-container is-responsive"
>
  <table
    className="ola_table"
  >
    <tbody />
  </table>
</div>
`;

exports[`Can be stiky 1`] = `
<div
  className="ola_table-container"
>
  <table
    className="ola_table is-sticky"
  >
    <tbody />
  </table>
</div>
`;

exports[`ColSpan Cell 1`] = `
<td
  className="ola_tableCell is-left"
  colSpan={8}
  style={
    Object {
      "--borderColor": null,
      "--table-background": null,
    }
  }
/>
`;

exports[`Default Cell 1`] = `
<td
  className="ola_tableCell is-left"
  style={
    Object {
      "--borderColor": null,
      "--table-background": null,
    }
  }
>
  Test content
</td>
`;

exports[`Default Table 1`] = `
<div
  className="ola_table-container"
>
  <table
    className="ola_table"
  >
    <tbody />
  </table>
</div>
`;

exports[`Empty Cell 1`] = `
<td
  className="ola_tableCell is-left"
  style={
    Object {
      "--borderColor": null,
      "--table-background": null,
    }
  }
/>
`;

exports[`Header Cell 1`] = `
<th
  className="ola_tableCell is-left"
  style={
    Object {
      "--borderColor": null,
      "--table-background": null,
    }
  }
>
  Content
</th>
`;

exports[`Numeric Cell 1`] = `
<td
  className="ola_tableCell is-numeric"
  style={
    Object {
      "--borderColor": null,
      "--table-background": null,
    }
  }
>
  8
</td>
`;

exports[`Table row 1`] = `
<tr
  className="ola_tableRow is-selectable"
>
  <td
    className="ola_tableCell is-check"
    style={
      Object {
        "--borderColor": null,
        "--table-background": null,
      }
    }
  >
    <label
      className="ola_check"
    >
      <input
        className="ola_check-input"
        type="checkbox"
      />
      <div
        className="ola_check-label"
      />
    </label>
  </td>
  <td
    className="ola_tableCell is-left"
    style={
      Object {
        "--borderColor": null,
        "--table-background": null,
      }
    }
  >
    First column
  </td>
</tr>
`;

exports[`Table with extra class 1`] = `
<div
  className="ola_table-container"
>
  <table
    className="ola_table extra-class"
  >
    <tbody />
  </table>
</div>
`;
